# ai-shniza

./:  img_ideogram-v3-turbo.py  .gitignore  ai-shniza.db  chatterbox_price.py  generation.py  ideogram.py  imagegen4.py  img2cartoon_flux.py  img2cartoon_flux_pay.py  img2vid_kling_pay.py  img2video_kling_pay.py  img2video_minimax_pay.py  img2video_seedance.py  img_google_imagen4.py  keyboards.py  main.py  model3.py  pyproject.toml  render.yaml  requirements.txt  t2vid_veo3_pay_fal.py  t2vid_veo3_repl_pay.py  t2voice_chaterbox_free.py  veo3_price.py
archive/: balance.py  chatterbox_price.py  kling.py  ma.py  model_image_1.py  musicgen.py  t2music_max.py
archive/generation/: generate.py
bot/: change_balance.py  check_balance.py  config.py  invoice.py  payments.py  start.py  webhook.py
database/: __init__.py  db.py  models.py
generation/models/: model_image_2.py  model_video_3.py
models/: chatterbox.py  flux.py  gpt.py  ideogram.py  imagegen4.py  kling.py  kling_price.py  minimax.py  model_video_1.py  model_video_2.py  musicgen.py  seedance.py  t2voice_chaterbox_free.py  veo3.py
