[project]
name = "ai-shniza"
version = "0.1.0"
description = ""
authors = [
    {name = "NastyNastya2024",email = "anastkomarova@yandex.ru"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "aiohttp (>=3.11,<4.0)",
    "aiofiles (==24.1.0)",
    "aiogram (==3.20.0.post0)",
    "aiohappyeyeballs (==2.6.1)",
    "aiosignal (==1.3.2)",
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "attrs (==25.3.0)",
    "certifi (==2025.4.26)",
    "charset-normalizer (==3.4.2)",
    "fal-client (==0.7.0)",
    "frozenlist (==1.6.0)",
    "grpcio (==1.72.1)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.25.2)",
    "httpx-sse (==0.4.0)",
    "idna (==3.10)",
    "magic-filter (==1.0.12)",
    "multidict (==6.4.4)",
    "propcache (==0.3.1)",
    "pydantic (==2.11.5)",
    "pydantic-core (==2.33.2)",
    "python-dotenv (==1.1.0)",
    "python-telegram-bot (==20.6)",
    "requests (==2.32.3)",
    "sniffio (==1.3.1)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.13.2)",
    "urllib3 (==2.4.0)",
    "yarl (==1.20.0)",
    "sqlalchemy (==2.0.30)",
    "replicate (>=1.0.7,<2.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai-shniza"
version = "0.1.0"
description = ""
authors = ["your@email.com"]
package-mode = false